Add support email to website footer

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,16 @@
             font-size: 0.9rem;
             margin-top: 1rem;
         }
+        .support-email {
+            color: #666;
+            font-size: 0.9rem;
+            margin-top: 0.5rem;
+        }
+        .support-email a {
+            display: inline;
+            padding: 0;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -100,6 +110,7 @@
             <a href="/privacypolicy.html">Privacy Policy</a>
             <a href="/termsandconditions.html">Terms & Conditions</a>
             <div class="app-version">Version 1.0.0 • Requires iOS 17.0 or later</div>
+            <div class="support-email">Support: <a href="mailto:waddiesapp@gmail.com">waddiesapp@gmail.com</a></div>
         </div>
     </div>
 </body>
