Fix navigation links to work with Firebase hosting

--- a/public/index.html
+++ b/public/index.html
@@ -152,13 +152,13 @@
                     <img src="images/stats.png" alt="Player Statistics">
                 </div>
             </div>
-            <a href="/marketing.html" class="marketing-link">Learn More About Waddies</a>
+            <a href="marketing.html" class="marketing-link">Learn More About Waddies</a>
         </div>
 
         <div class="footer">
-            <a href="/privacypolicy.html">Privacy Policy</a>
-            <a href="/termsandconditions.html">Terms & Conditions</a>
-            <a href="/age-rating.html">Age Rating</a>
+            <a href="privacypolicy.html">Privacy Policy</a>
+            <a href="termsandconditions.html">Terms & Conditions</a>
+            <a href="age-rating.html">Age Rating</a>
             <div class="app-version">Version 1.0.0 • Requires iOS 17.0 or later</div>
             <div class="support-email">Support: <a href="mailto:waddiesapp@gmail.com">waddiesapp@gmail.com</a></div>
         </div>
