--- a/public/marketing.html
+++ b/public/marketing.html
@@ -247,10 +247,10 @@
         </div>
 
         <div class="footer">
-            <a href="/">Home</a>
-            <a href="/privacypolicy.html">Privacy Policy</a>
-            <a href="/termsandconditions.html">Terms & Conditions</a>
-            <a href="/age-rating.html">Age Rating</a>
+            <a href="index.html">Home</a>
+            <a href="privacypolicy.html">Privacy Policy</a>
+            <a href="termsandconditions.html">Terms & Conditions</a>
+            <a href="age-rating.html">Age Rating</a>
             <div class="app-version">Version 1.0.0 • Requires iOS 17.0 or later</div>
             <div class="support-email">Support: <a href="mailto:waddiesapp@gmail.com">waddiesapp@gmail.com</a></div>
         </div>
