--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,7 @@
         </div>
 
         <div class="footer">
+            <a href="stats.html">Player Stats</a>
             <a href="privacypolicy.html">Privacy Policy</a>
             <a href="termsandconditions.html">Terms & Conditions</a>
             <a href="age-rating.html">Age Rating</a>
