Update stats page to use Firebase RTDB

--- a/public/stats.html
+++ b/public/stats.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Waddies - Player Statistics</title>
-    <!-- No Firebase SDK needed for local data -->
+    <!-- Firebase SDK -->
+    <script defer src="/__/firebase/10.8.0/firebase-app-compat.js"></script>
+    <script defer src="/__/firebase/10.8.0/firebase-database-compat.js"></script>
+    <script defer src="/__/firebase/init.js?useEmulator=false"></script>
     <!-- Chart.js for statistics visualization -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -269,27 +272,24 @@
                 if (e.target === modal) modal.style.display = 'none';
             };
 
-            // Load and display player statistics
-            async function loadPlayerStats() {
-                try {
-                    // Load players data
-                    const playersResponse = await fetch('data/players_20250809T140413Z.json');
-                    playersData = await playersResponse.json();
-
-                    // Load games data
-                    const gamesResponse = await fetch('data/games_20250809T152129Z.json');
-                    gamesData = await gamesResponse.json();
-
-                    // Load player rounds data
-                    const playerRoundsResponse = await fetch('data/player_rounds_justin_20250809T152126Z.json');
-                    playerRoundsData = await playerRoundsResponse.json();
-
+            // Initialize Firebase and load data
+            function loadPlayerStats() {
+                const db = firebase.database();
+                
+                Promise.all([
+                    db.ref('/players').once('value'),
+                    db.ref('/games').once('value'),
+                    db.ref('/player_rounds').once('value')
+                ]).then(([playersSnapshot, gamesSnapshot, roundsSnapshot]) => {
+                    playersData = playersSnapshot.val() || {};
+                    gamesData = gamesSnapshot.val() || {};
+                    playerRoundsData = roundsSnapshot.val() || {};
                     updateTable();
-                } catch (error) {
+                }).catch((error) => {
                     console.error('Error loading data:', error);
                     document.querySelector('.stats-table').insertAdjacentHTML('beforebegin', 
                         '<div class="error">Error loading statistics. Please try again later.</div>');
-                };
+                });
             }
 
             // Update table with current filters and sorting
